--- a/assets/stylesheets/existing/police-blog.css
+++ b/assets/stylesheets/existing/police-blog.css
@@ -107,14 +107,12 @@ body {
 	width : 140px;
 	float : left;
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	background-color : #FFF;
 	padding : 0px;
 	margin : 10px;
 	list-style-type : none;
 }
 #megamenusub li {
-	font-size : 12px;
 	font-weight : normal;
 	color : #333;
 	margin : 0;
@@ -135,7 +133,6 @@ body {
 	text-decoration : none;
 	border : none;
 	font-weight : normal;
-	font-size : 12px;
 	line-height : 22px;
 	margin : 0;
 }
@@ -151,7 +148,6 @@ body {
 }
 #navigation_primary p {
 	margin : 0 0 0 50px;
-	font-size : 12px;
 }
 #navigation_primary h1 {
 	font-family : Arial, Helvetica, sans-serif;
@@ -218,7 +214,6 @@ body {
 }
 #container_localnavigation li a {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	color : #002280;
 	padding : 0 0 0  25px;
 	margin : 0;
@@ -231,7 +226,6 @@ body {
 }
 #container_localnavigation li a:hover {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	color : #002280;
 	padding : 0 0 0 25px;
 	margin : 0;
@@ -247,7 +241,6 @@ body {
 	border-top : 6px solid #cacaca;
 	font-family : Arial, Helvetica, sans-serif;
 	font-weight : bold;
-	font-size : 12px;
 	text-transform : uppercase;
 	border-bottom : 1px solid #adadad;
 	background-image : none;
@@ -315,7 +308,6 @@ body {
 	padding : 0px;
 }
 #county_news ol a {
-	font-size : 12px;
 }
 #county_news .description {
 	display : none;
@@ -529,7 +521,6 @@ body {
 }
 .smalltext {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	color : #002280;
 }
 #baco_breadcrumb {
@@ -551,12 +542,10 @@ body {
 	padding : 0;
 	font-family : Arial, Helvetica, sans-serif;
 	text-transform : uppercase;
-	font-size : 12px;
 	color : #444;
 	font-weight : bold;
 }
 #agencyname h1 {
-	font-size : 12px;
 	color : #444;
 	font-family : Arial, Helvetica, sans-serif;
 	text-transform : uppercase;
@@ -636,7 +625,6 @@ body {
 #servicescontainer li a {
 	color : #002280;
 	font-family : Arial,Helvetica,sans-serif;
-	font-size : 12px;
 	margin : 0;
 	padding : 5px 0 5px 25px;
 	text-decoration : none;
@@ -645,7 +633,6 @@ body {
 #servicescontainer li a:hover {
 	color : #002280;
 	font-family : Arial,Helvetica,sans-serif;
-	font-size : 12px;
 	margin : 0;
 	padding : 5px 0 5px 25px;
 	text-decoration : underline;
@@ -661,7 +648,6 @@ body {
 }
 #services .title {
 	color : #444;
-	font-size : 12px;
 }
 #moreservices {
 	margin : 0 0 0 13px;
@@ -764,7 +750,6 @@ body {
 }
 #SECalendarTable .SECalendarEventName {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	font-weight : bold;
 	padding-top : 5px;
 	padding-bottom : 5px;
@@ -867,7 +852,6 @@ body {
 }
 .SECalendarWeek {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	background-color : #999;
 	color : #FFF;
 	font-weight : bold;
@@ -1006,7 +990,6 @@ select {
 }
 #emailfriendtime {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	font-style : italic;
 	margin-bottom : 15px;
 	padding-top : 25px;
@@ -1016,7 +999,6 @@ select {
 	font-size : 11px;
 }
 #SEEventEmailFriendType strong {
-	font-size : 12px;
 }
 #emailfriendlocation {
 	margin-bottom : 10px;
@@ -1024,7 +1006,6 @@ select {
 	font-size : 11px;
 }
 #emailfriendlocation strong {
-	font-size : 12px;
 }
 #SEEventEmailFriendDesc {
 	font-family : Arial, Helvetica, sans-serif;
@@ -1087,7 +1068,6 @@ select {
 }
 #RemindMeForm .SEEventRemindmeLabel {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	font-weight : bold;
 	padding-top : 10px;
 	padding-right : 10px;
@@ -1105,7 +1085,6 @@ select {
 }
 #SEEventRemindmeMessage {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	font-weight : bold;
 	padding-top : 25px;
 	padding-right : 10px;
@@ -1142,7 +1121,6 @@ select {
 }
 #SEEventRemindMeDate {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	font-style : italic;
 	padding-top : 20px;
 	padding-bottom : 10px;
@@ -1169,7 +1147,6 @@ select {
 	float : left;
 }
 #SEEventSearchStart {
-	font-size : 12px;
 	font-weight : bold;
 	padding-top : 10px;
 	padding-right : 10px;
@@ -1184,7 +1161,6 @@ select {
 	padding-left : 0px;
 }
 #SEEventSearchEnd {
-	font-size : 12px;
 	font-weight : bold;
 	padding-top : 10px;
 	padding-right : 10px;
@@ -1767,7 +1743,6 @@ input#mce-EMAIL {
 }
 #lookingfor_callout li a {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	color : #002280;
 	padding : 0 0 0  25px;
 	margin : 0;
@@ -1780,7 +1755,6 @@ input#mce-EMAIL {
 }
 #lookingfor_callout li a:hover {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 12px;
 	color : #002280;
 	padding : 0 0 0 25px;
 	margin : 0;
@@ -1796,7 +1770,6 @@ input#mce-EMAIL {
 	border-top : 6px solid #cacaca;
 	font-family : Arial, Helvetica, sans-serif;
 	font-weight : bold;
-	font-size : 12px;
 	text-transform : uppercase;
 	border-bottom : 1px solid #adadad;
 	background-image : none;
@@ -2487,5 +2460,8 @@ a.selectedtoggler img {
 }
 #maincontainer .facebookfeedbox .titlebox a:hover {
 	color: white;
+}
+a {
+	color: #002280;
 }
 
