--- a/assets/stylesheets/existing/fullwidth-bootstrap.css
+++ b/assets/stylesheets/existing/fullwidth-bootstrap.css
@@ -1,1 +1,15 @@
-#container_localnavigation{display:none;}#column2{width:915px;}#backgroundshadow{background-image:url("http://baltimorecountymd.gov/sebin/p/c/background-shadow-fullwidth.png");}.logobox{background-image:url("http://baltimorecountymd.gov/sebin/x/c/seal-new-fullwidth.jpg");}#agencyheader{width:910px;}
+#container_localnavigation{display:none;}#column2{width:915px;}#backgroundshadow{background-image:url("http://baltimorecountymd.gov/sebin/p/c/background-shadow-fullwidth.png");}.logobox{background-image:url("http://baltimorecountymd.gov/sebin/x/c/seal-new-fullwidth.jpg");}#agencyheader{width:910px;}#agencyname {
+  color: #444444;
+  display: inline;
+  float: left;
+  font-family: Arial,Helvetica,sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  margin: 0 0 10px;
+  padding: 10px 0;
+  text-transform: uppercase;
+  width: auto;
+  border-top: 6px solid #e9e9e9;
+  width: 100%;
+  border-bottom: 1px solid #CCCCCC;
+}
