--- a/assets/stylesheets/existing/red-inside-full-width.css
+++ b/assets/stylesheets/existing/red-inside-full-width.css
@@ -18,3 +18,18 @@
 #agencyheader {
     width:910px;
 }
+#agencyname {
+  color: #444444;
+  display: inline;
+  float: left;
+  font-family: Arial,Helvetica,sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  margin: 0 0 10px;
+  padding: 10px 0;
+  text-transform: uppercase;
+  width: auto;
+  border-top: 6px solid #e9e9e9;
+  width: 100%;
+  border-bottom: 1px solid #CCCCCC;
+}
