--- a/assets/stylesheets/inside-template.scss
+++ b/assets/stylesheets/inside-template.scss
@@ -8,14 +8,20 @@
 @import "partials/base/brand";
 @import "partials/base/footer";
 
-@import "partials/inside/insideGrid";
-@import "partials/inside/search";
-
 @import "partials/components/social";
 @import "partials/components/textResizer";
 @import "partials/components/buttons";
 @import "partials/components/fullSite";
 @import "partials/components/skipNav";
+
+
+@import "partials/inside/insideGrid";
+@import "partials/inside/rateForm";
+@import "partials/inside/search";
+
+@import "vendor/reView";
+
+
 
 /*This will ensure that the background colors will fill the screen*/
 body {
@@ -27,12 +33,6 @@ body {
 	padding: 0;
 	margin: 0;
 }
-
-#maincontainer p {
-	font-size: 12px;
-	line-height: 1.5em;
-	margin: 0 0 15px 0; 	
-}
 #maincontainer #calloutarea p {
   margin: 10px 0 15px;
 }
@@ -43,12 +43,11 @@ body {
 
 
 textarea,
-input,
 input[type="search"],
 input[type="text"],
 input[type="button"],
 input[type="submit"] {
-     -webkit-appearance: none;
+		-webkit-appearance: none;
      -webkit-border-radius: 0;
      border-radius: 0;
 }
