--- a/assets/stylesheets/mobile.css
+++ b/assets/stylesheets/mobile.css
@@ -209,7 +209,7 @@ html {
 
 html, body {
   background: #dbdbdb;
-  color: #444444;
+  color: #444;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   margin: 0;
@@ -217,7 +217,7 @@ html, body {
   width: 100%; }
 
 img {
-  border: 1px solid #cccccc;
+  border: 1px solid #ccc;
   margin: 5px;
   padding: 5px; }
 
@@ -228,7 +228,6 @@ input[type="search"],
 input[type="text"],
 input[type="button"],
 input[type="submit"] {
-  -webkit-appearance: none;
   -webkit-border-radius: 0;
   border-radius: 0; }
 
@@ -957,33 +956,32 @@ input[type="submit"] {
   src: url("/sebin/u/y/PatuaOne-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("/sebin/i/z/PatuaOne-Regular-webfont.woff2") format("woff2"), url("/sebin/c/m/PatuaOne-Regular-webfont.woff") format("woff"), url("/sebin/c/o/PatuaOne-Regular-webfont.ttf") format("truetype"), url("/sebin/b/d/PatuaOne-Regular-webfont.svg#patua_oneregular") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 @font-face {
   font-family: 'LatoSemiBold';
   src: url("/sebin/s/v/Lato-Semibold-webfont.eot");
   src: url("/sebin/s/v/Lato-Semibold-webfont.eot?#iefix") format("embedded-opentype"), url("/sebin/q/h/Lato-Semibold-webfont.woff2") format("woff2"), url("/sebin/y/z/Lato-Semibold-webfont.woff") format("woff"), url("/sebin/y/p/Lato-Semibold-webfont.ttf") format("truetype"), url("/sebin/v/j/Lato-Semibold-webfont.svg") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 @font-face {
   font-family: 'Lato';
   src: url("/sebin/g/x/Lato-Bold-webfont.eot");
   src: url("/sebin/g/x/Lato-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("/sebin/w/q/Lato-Bold-webfont.woff2") format("woff2"), url("/sebin/k/i/Lato-Bold-webfont.woff") format("woff"), url("/sebin/i/t/Lato-Bold-webfont.ttf") format("truetype"), url("/sebin/h/i/Lato-Bold-webfont.svg") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 .homepage body, .header body, .footer body {
   font-size: .95em;
   line-height: 1.5em;
-  color: #444444; }
+  color: #444; }
 .homepage p, .header p, .footer p {
   margin: 0 0 20px;
   line-height: 24px; }
 .homepage small, .header small, .footer small {
   font-size: 85%; }
 .homepage h1, .homepage h2, .homepage h3, .homepage h4, .homepage h5, .homepage h6, .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .footer h1, .footer h2, .footer h3, .footer h4, .footer h5, .footer h6 {
-  color: #444444;
-  font-weight: normal; }
+  color: #444;
+  font-weight: normal;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased; }
 .homepage h1, .homepage h2, .header h1, .header h2, .footer h1, .footer h2 {
   font-family: "Patua One", sans-serif; }
 .homepage h3, .homepage h4, .homepage h5, .header h3, .header h4, .header h5, .footer h3, .footer h4, .footer h5 {
@@ -1022,7 +1020,7 @@ input[type="submit"] {
   height: 100%; }
 
 .secondary-header {
-  background: #333333;
+  background: #333;
   font-size: .85em;
   padding: 10px 0;
   width: 100%; }
@@ -1032,7 +1030,7 @@ input[type="submit"] {
     line-height: 11px;
     text-decoration: underline; }
     .secondary-header a:hover {
-      color: white; }
+      color: #fff; }
   .secondary-header .page-tools {
     text-align: right; }
     .secondary-header .page-tools a, .secondary-header .page-tools ul {
@@ -1051,7 +1049,7 @@ input[type="submit"] {
     display: block;
     position: absolute;
     z-index: 999;
-    top: 25px;
+    top: 17.5px;
     right: 0;
     padding: 10px; } }
 .primary-nav-container {
@@ -1059,13 +1057,13 @@ input[type="submit"] {
 
 .primary-nav {
   background: #c51110;
-  color: white;
+  color: #fff;
   list-style-type: none;
   height: 100%;
   margin: 0;
   padding: 0; }
   .primary-nav a {
-    color: white; }
+    color: #fff; }
   .primary-nav .primary-nav-item {
     background-color: #a90f0e;
     border-right: 5px solid #c51110;
@@ -1122,8 +1120,10 @@ input[type="submit"] {
 @media only screen and (min-width: 767px) and (max-width: 992px) {
   .homepage .primary-nav {
     width: 100%; }
+  .homepage .primary-nav .primary-nav-item .primary-nav-item__headline {
+    font-size: 1.5em; }
   .homepage .primary-nav .primary-nav-item a {
-    background: url("//baltimorecountymd.gov/sebin/l/t/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
+    background: url("//baltimorecountymd.gov/sebin/l/t/little-arrow.png") no-repeat scroll 12.5px 22px transparent;
     padding: 20px 0 20px 40px; }
   .homepage .primary-nav .primary-nav-item {
     margin: 0 0 5px; } }
@@ -1150,7 +1150,7 @@ input[type="submit"] {
   padding: 0; }
 
 .secondary-nav {
-  background: #333333;
+  background: #333;
   z-index: 999; }
   .secondary-nav .secondary-nav-list {
     padding: 12px 0 13px; }
@@ -1178,7 +1178,7 @@ input[type="submit"] {
 .brand a, .brand a:hover {
   text-decoration: none; }
 .brand h1 {
-  color: white; }
+  color: #fff; }
 .brand h1, .brand img {
   border: none; }
 .brand img {
@@ -1189,7 +1189,8 @@ input[type="submit"] {
   line-height: 28px;
   padding: 31.5px 0 29.5px;
   font-family: Lato, Arial, sans-serif;
-  font-weight: 700;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
   letter-spacing: .4px;
   margin: 0; }
 .brand .brand-logo, .brand .brand-heading {
@@ -1204,11 +1205,12 @@ input[type="submit"] {
     font-size: 1.4em; } }
 @media only screen and (max-width: 480px) {
   .homepage .brand {
-    padding: 5px; }
+    padding: 0 0 0 5px; }
     .homepage .brand .brand-heading {
       font-size: 1.4em;
       line-height: 25px;
-      margin: 10px 0 0; }
+      margin: 0;
+      padding-top: 27px; }
     .homepage .brand .brand-logo {
       height: 65px;
       width: 65px;
@@ -1226,12 +1228,12 @@ input[type="submit"] {
     text-align: left; } }
 .secondary-footer {
   background: #c51110;
-  color: white;
+  color: #fff;
   padding: 20px 0; }
   .secondary-footer a {
     color: white; }
   .secondary-footer .county-links-list-item {
-    border-right: 1px solid white;
+    border-right: 1px solid #fff;
     padding: 0 5px; }
     .secondary-footer .county-links-list-item:last-child {
       border-right: none; }
@@ -1271,16 +1273,16 @@ input[type="submit"] {
   margin: 15px 15px 0 0; }
 
 .footer {
-  background: #333333;
+  background: #333;
   color: #dbdbdb;
   font-size: .85em; }
   .footer a {
     color: #dbdbdb;
     text-decoration: underline; }
     .footer a:hover {
-      color: white; }
+      color: #fff; }
   .footer h2 {
-    color: white; }
+    color: #fff; }
   .footer h2, .footer img {
     border: none; }
   .footer ul, .footer ol {
@@ -1305,7 +1307,7 @@ input[type="submit"] {
       padding-left: 5px; } }
 /*Components*/
 .secondary-nav {
-  background: #333333;
+  background: #333;
   z-index: 999; }
   .secondary-nav .secondary-nav-list {
     padding: 12px 0 13px; }
@@ -1339,8 +1341,11 @@ input[type="submit"] {
   margin: 0; }
   .resizer-list li, .resizer-list li:first-child {
     padding: 0 5px; }
-  .resizer-list button.active {
-    color: white; }
+  .resizer-list button, .resizer-list .search-form .search-button, .search-form .resizer-list .search-button {
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased; }
+    .resizer-list button.active, .resizer-list .search-form .active.search-button, .search-form .resizer-list .active.search-button {
+      color: white; }
 
 .resizer-item {
   color: #dbdbdb;
@@ -1369,10 +1374,9 @@ input[type="submit"] {
 
 /*Alert Box*/
 .alert {
-  padding: 10px;
   background-color: #feb30c;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: .6em;
+  line-height: 0;
   text-align: center; }
   .alert a {
     text-decoration: none; }
@@ -1380,21 +1384,23 @@ input[type="submit"] {
       color: #003399; }
   .alert h1 {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.15em;
     font-weight: bold;
-    border-top: none;
-    border-bottom: none;
-    margin: 0; }
+    border: none;
+    margin: 0;
+    padding: 20px;
+    line-height: 1; }
 
 @media only screen and (max-width: 1100px) {
   .alert h1 {
     line-height: 30px; } }
 @media only screen and (max-width: 767px) {
   .alert {
-    font-size: .5em;
+    font-size: .8em;
     margin: -20px 0 20px; }
     .alert h1 {
       line-height: 1.5; } }
-button {
+button, .search-form .search-button {
   background: #feb30c;
   cursor: pointer;
   font-family: Arial, Helvetica, sans-serif;
@@ -1411,18 +1417,19 @@ button {
 
 .link-btn {
   background: #feb30c;
-  border: 1px solid #444444;
+  border: 1px solid #444;
   padding: 10px;
-  color: #444444;
+  color: #444;
   text-decoration: none;
   font-weight: 700;
   font-family: Arial;
   font-size: 1.1em; }
   .link-btn:hover {
     background: #fed372;
-    color: #444444; }
+    color: #444; }
 
 .view-full-site-btn {
+  color: white;
   padding: 20px 10px; }
 
 .skip {
@@ -1434,7 +1441,7 @@ button {
   width: 1px;
   text-align: left;
   overflow: hidden;
-  z-index: 999; }
+  z-index: 9999; }
 
 a.skip:active,
 a.skip:focus,
@@ -1444,13 +1451,14 @@ a.skip:hover {
   width: auto;
   height: auto;
   overflow: visible;
-  transition: top .25s linear; }
+  transition: top .25s linear;
+  z-index: 9999; }
 
 .social-media-list {
   list-style-type: none;
   text-align: center; }
   .social-media-list h1, .social-media-list a {
-    color: white; }
+    color: #fff; }
   .social-media-list li {
     padding-left: 0; }
 
@@ -1521,58 +1529,41 @@ a.skip:hover {
   .social-media-list-item {
     margin-right: 10px; } }
 /*Include the homepage search styles*/
-.search, .cse input.gsc-input, input.gsc-input {
+.search {
   padding: 20px; }
-  .search .search-input, .search button, .search .gsc-search-button, .cse input.gsc-input .search-input, .cse input.gsc-input button, .cse input.gsc-input .gsc-search-button, input.gsc-input .search-input, input.gsc-input button, input.gsc-input .gsc-search-button {
-    margin: 0 !important; }
-  .search .search-text, .cse input.gsc-input .search-text, input.gsc-input .search-text {
-    overflow: hidden; }
-  .search .search-label, .cse input.gsc-input .search-label, input.gsc-input .search-label {
+
+.search-form {
+  display: table;
+  width: 100%; }
+  .search-form .search-label {
     position: absolute;
     left: -999em; }
-  .search .search-input, .cse input.gsc-input .search-input, input.gsc-input .search-input {
-    float: left;
-    padding: 0px 20px;
+  .search-form .table-cell {
+    display: table-cell;
     width: 100%; }
-  .search div.gsc-clear-button, .cse input.gsc-input div.gsc-clear-button, input.gsc-input div.gsc-clear-button {
-    display: none; }
+  .search-form .search-input, .search-form .search-button {
+    border: 1px solid #999; }
+  .search-form .search-input {
+    padding: 20px;
+    width: 99%; }
+  .search-form .search-button {
+    margin: 0;
+    padding: 18.5px 20px; }
 
-input.gsc-search-button {
-  border-radius: 0 !important;
-  color: #444444 !important;
-  float: right;
-  background: #feb30c !important;
-  cursor: pointer;
-  font-family: Arial, Helvetica, sans-serif !important;
-  font-size: 17.6px !important;
-  font-weight: 700 !important;
-  padding: 19px 20px 39px !important; }
-
-.cse input.gsc-input, input.gsc-input {
-  background: white !important;
-  padding: 20px !important; }
-
-td.gsc-input {
-  padding-right: 0 !important; }
-
-td.gsc-clear-button {
-  width: 0 !important; }
-
-.cse form.gsc-search-box, form.gsc-search-box {
-  margin: 0 !important;
-  padding: 0 !important; }
-
-input.gsc-input, input.gsc-search-button {
-  border: 1px solid #999 !important; }
+/*Google Autocomplete links*/
+.gsc-completion-title {
+  color: #002280 !important; }
 
 @media only screen and (max-width: 400px) {
-  .cse input.gsc-input, input.gsc-input {
-    padding: 4px !important; }
-
-  .cse input.gsc-search-button, input.gsc-search-button {
-    background: #feb30c !important;
-    font-size: 1.1em !important;
-    padding: 0 !important; } }
+  .homepage input::-webkit-input-placeholder {
+    color: transparent; }
+  .homepage input::-moz-placeholder {
+    color: transparent; }
+  .homepage input:-moz-placeholder {
+    /* Older versions of Firefox */
+    color: transparent; }
+  .homepage input:-ms-input-placeholder {
+    color: transparent; } }
 /*Search Box*/
 .search-container {
   background-color: #dbdbdb;
@@ -1605,15 +1596,15 @@ input.gsc-input, input.gsc-search-button {
       padding: 10px 0; }
 
   .alert {
-    font-size: .5em;
+    font-size: .9em;
     margin: -20px 0 20px; }
     .alert h1 {
       line-height: 1.5; } }
 @media only screen and (max-width: 400px) {
-  .homepage .search button {
+  .homepage .search .search-button {
     padding: 9.5px 5px; }
 
-  .search button {
+  .search .search-button {
     padding: 10px 5px;
     height: auto; }
   .search .search-input {
@@ -1630,16 +1621,10 @@ html, body {
   padding: 0;
   margin: 0; }
 
-#maincontainer p {
-  font-size: 12px;
-  line-height: 1.5em;
-  margin: 0 0 15px 0; }
-
 #maincontainer #calloutarea p {
   margin: 10px 0 15px; }
 
 textarea,
-input,
 input[type="search"],
 input[type="text"],
 input[type="button"],
@@ -1647,3 +1632,80 @@ input[type="submit"] {
   -webkit-appearance: none;
   -webkit-border-radius: 0;
   border-radius: 0; }
+
+.callout_box {
+  width: 100%; }
+  .callout_box h2 {
+    clear: both; }
+
+/*Blog Fixes*/
+.seBlogViewHeaderInfo {
+  display: none; }
+
+.seBlogViewPostTitle {
+  font-size: 21px;
+  line-height: 1.2em;
+  text-decoration: none;
+  color: #444; }
+
+.postTitle {
+  font-size: 21px;
+  line-height: 1.2em;
+  text-decoration: none;
+  color: #444; }
+
+.seBlogViewHeaderDesc {
+  display: none; }
+
+/*Form fixes*/
+@media only screen and (max-width: 500px) {
+  fieldset {
+    float: left;
+    width: 100% !important;
+    height: auto;
+    border-bottom: 1px solid #a9a9a9;
+    border-top: 1px solid #a9a9a9;
+    border-left-style: none;
+    border-right-style: none;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin: 20px 0;
+    display: block; }
+
+  .seInput {
+    width: 100% !important; }
+
+  .seTextarea {
+    width: 100% !important; }
+
+  .seText {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    font-style: normal;
+    color: #000000;
+    padding-top: 5px;
+    text-align: right;
+    padding-bottom: 5px;
+    font-weight: bold;
+    width: 100% !important; }
+
+  .seElementRow {
+    width: 100% !important; }
+
+  .seFieldCell {
+    width: 100% !important; }
+
+  .vertical {
+    width: 100% !important;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    color: #000000;
+    height: auto;
+    font-weight: bold; }
+
+  select {
+    width: 100% !important; } }
+@media only screen and (max-width: 480px) {
+  .homepage .brand .brand-heading {
+    font-size: 1.55em; } }
