--- a/assets/stylesheets/mobile.scss
+++ b/assets/stylesheets/mobile.scss
@@ -35,25 +35,90 @@ html, body {
 	margin: 0;
 }
 
-#maincontainer p {
-	font-size: 12px;
-	line-height: 1.5em;
-	margin: 0 0 15px 0; 	
-}
 #maincontainer #calloutarea p {
   margin: 10px 0 15px;
 }
 
 textarea,
-input,
 input[type="search"],
 input[type="text"],
 input[type="button"],
 input[type="submit"] {
-     -webkit-appearance: none;
+	-webkit-appearance: none;
      -webkit-border-radius: 0;
      border-radius: 0;
 }
 
 
+.callout_box {
+	width: 100%;
+
+	h2 {
+		clear: both;
+	}
+}
+
+/*Blog Fixes*/
+.seBlogViewHeaderInfo{display:none;}
+.seBlogViewPostTitle{font-size: 21px;line-height: 1.2em;text-decoration:none;color:#444;}
+.postTitle{font-size: 21px;line-height: 1.2em;text-decoration:none;color:#444;}
+.seBlogViewHeaderDesc{display:none;}
+
+/*Form fixes*/
+@media only screen and (max-width: 500px) {
+	fieldset {
+		float : left;
+		width : 100% !important;
+		height : auto;
+		border-bottom : 1px solid #a9a9a9;
+		border-top : 1px solid #a9a9a9;
+		border-left-style : none;
+		border-right-style : none;
+		padding-bottom : 20px;
+		padding-top : 20px;
+		margin : 20px 0;
+		display : block;
+	}
+	.seInput {
+		width : 100% !important;
+	}
+	.seTextarea {
+		width : 100% !important;
+	}
+	.seText {
+		font-family : Arial, Helvetica, sans-serif;
+		font-size : 11px;
+		font-style : normal;
+		color : #000000;
+		padding-top : 5px;
+		text-align : right;
+		padding-bottom : 5px;
+		font-weight : bold;
+		width : 100% !important;
+	}
+	.seElementRow {
+		width : 100% !important;
+	}
+	.seFieldCell {
+		width : 100% !important;
+	}
+	.vertical {
+		width : 100% !important;
+		text-align : left;
+		font-family : Arial, Helvetica, sans-serif;
+		font-size : 11px;
+		color : #000000;
+		height : auto;
+		font-weight : bold;
+	}
+	select {
+		width : 100% !important;
+	}
+}
+
+@media only screen and (max-width: 480px){
+    .homepage .brand .brand-heading {
+    	font-size: 1.55em;
+    }
+}
 
