--- a/assets/stylesheets/partials/base/_brand.scss
+++ b/assets/stylesheets/partials/base/_brand.scss
@@ -21,7 +21,8 @@
     line-height: 28px;
     padding: 31.5px 0 29.5px;
     font-family: $brand-font-family;
-    font-weight: 700;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
     letter-spacing:.4px;
     margin: 0;
   }
@@ -47,12 +48,13 @@
 @media only screen and (max-width: 480px){
   .homepage {
     .brand {
-      padding: 5px;
+      padding: 0 0 0 5px;
 
       .brand-heading {
           font-size: 1.4em;
           line-height: 25px;
-          margin: 10px 0 0;
+          margin: 0;
+          padding-top: 27px;
       }
 
       .brand-logo{
