--- a/assets/stylesheets/partials/components/_alert.scss
+++ b/assets/stylesheets/partials/components/_alert.scss
@@ -1,6 +1,6 @@
 /*Alert Box*/
 .alert{
-  padding: 10px;
+  
 
   a{
     text-decoration:none;
@@ -12,15 +12,17 @@
 
   h1{
     font-family:$default-font-family;
+    font-size: 1.15em;
     font-weight:bold;
-    border-top:none;
-    border-bottom:none;
+    border:none;
     margin: 0;
+    padding: 20px;
+    line-height:1;
   }
   
   background-color:$gold;
   font-family:$default-font-family;
-  font-size:.6em;
+  line-height: 0;
   text-align:center;
 }
 
@@ -32,7 +34,7 @@
 
 @media only screen and (max-width: 767px) {
   .alert {
-    font-size: .5em;
+    font-size: .8em;
     margin: -20px 0 20px;
 
     h1 {
