--- a/assets/stylesheets/partials/components/_primaryNav.scss
+++ b/assets/stylesheets/partials/components/_primaryNav.scss
@@ -113,7 +113,11 @@
     .primary-nav{
       width:100%;
     }
-
+    .primary-nav .primary-nav-item {
+      .primary-nav-item__headline {
+        font-size: 1.5em;
+      }
+    }
     .primary-nav .primary-nav-item a{
       background: url($little-arrow) no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
       padding: 20px 0 20px 40px;
