--- a/assets/stylesheets/partials/components/_search.scss
+++ b/assets/stylesheets/partials/components/_search.scss
@@ -1,67 +1,53 @@
-.search, .cse input.gsc-input, input.gsc-input {
+.search {
   padding: 20px;
+}
+.search-form {
+  display: table;
+  width: 100%;
 
-  .search-input, button, .gsc-search-button {
-    margin: 0 !important;
-  }
-
-  .search-text {
-    overflow: hidden;
-  }
-  
   .search-label {
     position: absolute; 
     left: -999em;
   }
-  
-  .search-input {
-    float: left;
-    padding: 0px 20px;
+  .table-cell {
+    display: table-cell;
     width: 100%;
   }
-  div.gsc-clear-button {
-    display: none;
+
+  .search-input, .search-button {
+    border: 1px solid #999;
+  }
+
+  .search-input { 
+    padding: 20px;
+    width: 99%;
+  }
+
+  .search-button {
+    @extend button;
+
+    margin: 0;
+    padding: 18.5px 20px;
   }
 }
-
-input.gsc-search-button {
-    border-radius: 0 !important;
-    color: $dark-gray !important;
-    float: right;
-    background: #feb30c !important;
-    cursor: pointer;
-    font-family: Arial, Helvetica, sans-serif !important;
-    font-size: 17.6px !important;
-    font-weight: 700 !important;
-    padding: 19px 20px 39px !important;
-}
-.cse input.gsc-input, input.gsc-input {
-  background: white !important;
-  padding: 20px !important; 
-}
-td.gsc-input {
-  padding-right: 0 !important;
-}
-td.gsc-clear-button {
-  width: 0 !important;
-}
-.cse form.gsc-search-box, form.gsc-search-box {
-  margin: 0 !important;
-  padding: 0 !important;
-}
-
-input.gsc-input, input.gsc-search-button {
-  border:1px solid #999 !important;
+/*Google Autocomplete links*/
+.gsc-completion-title {
+  color: $navy !important;
 }
 
 @media only screen and (max-width: 400px) {
-  .cse input.gsc-input, input.gsc-input {
-    padding: 4px !important;  
+  .homepage {
+    input::-webkit-input-placeholder {
+      color: transparent;
+    }
+    input::-moz-placeholder {
+      color: transparent;
+    }
+    input:-moz-placeholder {   /* Older versions of Firefox */
+      color: transparent;
+    }
+    input:-ms-input-placeholder { 
+      color: transparent;
+    }
   }
-  .cse input.gsc-search-button, input.gsc-search-button {
-      background: #feb30c !important;
-      font-size: 1.1em !important;
-      padding: 0 !important;
-  }
-
 }
