--- a/assets/stylesheets/partials/homepage/_newsFeed.scss
+++ b/assets/stylesheets/partials/homepage/_newsFeed.scss
@@ -1,4 +1,8 @@
 /*Contains the styles for Baltimore County Now*/
+
+.news-feed {
+  border-right:3px dotted $light-gray;
+}
 .news {
   .news-headline {
     font-weight: 900;
@@ -12,6 +16,7 @@
 .feedItems{
   .item {
     float: left;
+    margin: 0 0 20px;
     padding: 0 1.5em 0 0;
     width: 50%;
 
@@ -29,7 +34,7 @@
     color: $dark-gray;
     font-weight:normal;
     font-size:1.3em;
-    margin: 25px 0 0;
+    margin: 10px 0 5px;
   }
   h3 a{
     color:$dark-gray;
@@ -82,7 +87,15 @@ information on the homepage*/
   margin:30px 0 15px;
     
 }
+@media only screen and (max-width: 992px) {
+  .news-feed {
+    border: none;
+  }
+}
 @media only screen and (max-width: 767px) {
+  .county-photo-feed-headline {
+    display: none;
+  }
   .feedItems {
     .item {
       float: none;
