--- a/assets/stylesheets/partials/homepage/_search.scss
+++ b/assets/stylesheets/partials/homepage/_search.scss
@@ -45,7 +45,7 @@
     }
   }
   .alert {
-    font-size: .5em;
+    font-size: .9em;
     margin: -20px 0 20px;
 
     h1 {
@@ -55,11 +55,11 @@
 }
 
 @media only screen and (max-width: 400px) {
-  .homepage .search button {
+  .homepage .search .search-button {
     padding: 9.5px 5px;
   }
   .search {
-    button {
+    .search-button {
       padding: 10px 5px;
       height: auto;
     }
