--- a/assets/stylesheets/partials/inside/_search.scss
+++ b/assets/stylesheets/partials/inside/_search.scss
@@ -2,22 +2,30 @@
 
 .search-internal {
   padding: 1.5px 0;
-  
-  .search-input, .cse input.gsc-input, input.gsc-input {
-  	font-size: 1.2em !important;
-    height: auto !important;
-    padding: 8px 10px !important;
-  }
+    .search-input, .search-button {
+      border: 1px solid #999;
+      height: auto;
+    }
 
-  input.gsc-search-button {
-    border-radius: 0 !important;
-    font-family: Arial, Helvetica, sans-serif !important;
-    font-size: 1.1em !important;
-    font-weight: 700 !important;
-    border: 0 !important;
-    height: auto !important;
-    padding: 10px 10px !important;
-  }
+    .search-input {
+      font-size: 1.2em;
+      padding: 8px 10px;
+    }
 
+    .search-button {
+      border-radius: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1.1em;
+      font-weight: 700;
+      padding: 9px 10px;
+    }
+}
 
+.gsc-completion-container {
+  font-size: 1.2em !important;
+  font-weight: normal !important;
+}
+
+.gssb_a table, .gssb_a table tr, .gssb_a table tr td {
+  padding: 2.5px 5px !important;
 }
