--- a/staging/components/search.html
+++ b/staging/components/search.html
@@ -1,18 +1,110 @@
-<!-- <button>Search</button> -->
-<div class="search-text">
-  <label class="search-label" for="search-input">Search</label>
-	<script>
-	  (function() {
-	    var cx = '007558505509255245046:qqwcx9uroqk';
-	    var gcse = document.createElement('script');
-	    gcse.type = 'text/javascript';
-	    gcse.async = true;
-	    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-	        '//www.google.com/cse/cse.js?cx=' + cx;
+<script>
+/*
+
+Copied from: https://www.google.com/cse/brand?form=cse-search-box&lang=en
+and patched to be HTTPS-friendly. 
+
+Bug: http://www.google.com/support/forum/p/customsearch/thread?tid=1bf2598a30df483f&hl=en
+
+*/
+(function() {
+  
+  // copy this from your branding URL (e.g. &lang=en)
+  var lang = "en";
+  
+  var f = document.getElementById("search-form");
+  if(!f) {
+    f = document.getElementById("searchbox_demo")
+  }
+  if(f && f.q) {
+    var q = f.q;
+    var n = navigator;
+    var l = location;
+    var su = function() {
+      var u = document.createElement("input");
+      var v = document.location.toString();
+      var existingSiteurl = /(?:[?&]siteurl=)([^&#]*)/.exec(v);
+      if(existingSiteurl) {
+        v = decodeURI(existingSiteurl[1])
+      }
+      var delimIndex = v.indexOf("://");
+      if(delimIndex >= 0) {
+        v = v.substring(delimIndex + "://".length, v.length)
+      }
+      u.name = "siteurl";
+      u.value = v;
+      u.type = "hidden";
+      f.appendChild(u)
+    };
+    /*
+    // not necessary
+    if(n.appName == "Microsoft Internet Explorer") {
+      var s = f.parentNode.childNodes;
+      for(var i = 0;i < s.length;i++) {
+        if(s[i].nodeName == "SCRIPT" && s[i].attributes["src"] && s[i].attributes["src"].nodeValue == unescape("http://www.google.com/cse/brand?form=cse-search-box&lang=en")) {
+          su();
+          break
+        }
+      }
+    }else {*/
+      su();
+    //}
+    if(n.platform == "Win32") {
+      q.style.cssText = "border: 1px solid #7e9db9; padding: 2px;"
+    }
+    if(window.history.navigationMode) {
+      window.history.navigationMode = "compatible"
+    }
+    var b = function() {
+      if(q.value == "") {
+        var ga = ("https:" == document.location.protocol ? "https://" : "http://") + "www.google.com/cse/intl/" + lang + "/images/google_custom_search_watermark.gif";
+        q.style.background = "#FFFFFF url(" + ga + ") left no-repeat"
+      }
+    };
+    var f = function() {
+      q.style.background = "#ffffff"
+    };
+    q.onfocus = f;
+    q.onblur = b;
+    if(!/[&?]q=[^&]/.test(l.search)) {
+      b()
+    }
+  }
+})();
+	(function () {
+		var autoCompletionOptions = {
+		  'maxCompletions' : 5
+		};
+	    var cx = '007558505509255245046:qqwcx9uroqk',
+	        searchForm = 'search-form',
+	        goog = document.createElement('script'),
+	        httpStr = document.location.protocol == 'https:' ? 'https:' : 'http:';
+	    goog.type = 'text/javascript';
+	    goog.src = httpStr +
+	        '//www.google.com/jsapi';
+	    goog.onload = function () {
+	        google.load('search', '1', {
+	            "callback": function () {}
+	        });
+	        google.setOnLoadCallback(function () {
+	            google.search.CustomSearchControl.attachAutoCompletionWithOptions(cx, document.getElementById('q'), searchForm, autoCompletionOptions);
+	        });
+	    };
 	    var s = document.getElementsByTagName('script')[0];
-	    s.parentNode.insertBefore(gcse, s);
-	  })();
-	</script>
-	<gcse:searchbox-only enableAutoComplete="true"></gcse:searchbox-only>
-	<!-- <gcse:search type="search" class="search-input" name="search-input" placeholder="Search for agencies, services and more..."></gcse:search> -->
-</div>
+	    s.parentNode.insertBefore(goog, s);
+	})();
+</script>
+<div class="search-text">
+	<form id="search-form" class="search-form" action="//www.baltimorecountymd.gov/search/googlesearchresults.html">
+	  <div class="table-cell">
+	  	<label class="search-label" for="q">Search</label>
+	  	<input class="search-input" id="q"  name="q" placeholder="Search for agencies, services and more..." type="text"/>
+	  </div>
+	  <div class="table-cell">
+	  	<input type="hidden" name="ie" value="UTF-8" />
+	  	<input type="hidden" name="cx" value="007558505509255245046:qqwcx9uroqk" />
+	  	<input type="hidden" name="cof" value="FORID:10" />
+	  	<input class="search-button" autocomplete="off" value="Search" name="sa" type="submit"/>
+	  </div>
+	</form>
+</div> 
