--- a/assets/stylesheets/mobile.scss
+++ b/assets/stylesheets/mobile.scss
@@ -60,7 +60,8 @@ input[type="submit"] {
 
 /*Blog Fixes*/
 .seBlogViewHeaderInfo{display:none;}
-.seBlogViewPostTitle{font-size: 21px;line-height: 1.2em;text-decoration:none;color:#444;}
+.seBlogViewPostTitle{font-size: 21px;line-height: 1.2em;text-decoration:none;color:#444;font-weight:bold;margin: 10px 0 20px;}
+.seBlogViewPostTitle a{text-decoration:none;}
 .postTitle{font-size: 21px;line-height: 1.2em;text-decoration:none;color:#444;}
 .seBlogViewHeaderDesc{display:none;}
 
