--- a/assets/stylesheets/existing/police-blog-extra.css
+++ b/assets/stylesheets/existing/police-blog-extra.css
@@ -115,3 +115,20 @@ p {
 
 .tulipTVPlayerContainerDesc{clear:none;}
 .tulipMain{width:500px;}
+
+.postTitle {
+    color: #444;
+    font-size: 21px;
+    font-weight: bold;
+    line-height: 1.2em;
+    margin: 10px 0 20px;
+    text-decoration: none;
+}
+
+.postAuthor{
+display:none;
+}
+
+.postCommentSummary{
+display:none;
+}
